--- a/Bericht/Quellen.bib
+++ b/Bericht/Quellen.bib
@@ -19,7 +19,8 @@
   timestamp = {22.02.2022},
   url       = {https://www.amazon.de/GPS-Tracker-Motorrad-Fahrzeuge-Akkulaufzeit-Standby/dp/B07TV4W8H4/ref=sr_1_8?keywords=gps auto tracker&qid=1645548524&sprefix=gps aut,aps,97&sr=8-8},
 }
-@Flutter{Flutter,
+
+{Flutter,
   author    = Jesko Landwehr ,
   title     = Was ist Flutter?,
   owner     = it-talents.de,
@@ -33,6 +34,7 @@
   timestamp = {22.02.2022},
   url       = {https://entwickler.de/mobile/flutter-haft},
 }
+
 @android{android,
   author    = programmierenlernenhq ,
   title     = Android Studio Tipps und Tricks,
@@ -43,7 +45,7 @@
 
 
 
-@Misc{,
+@Misc{Full2022,
   author       = {Dipl.-Ing Hanna Full},
   howpublished = {moodle},
   month        = jan,
@@ -52,6 +54,15 @@
   file         = {:C\:/Users/MiN0DE/OneDrive/Desktop/06 Design Thinking - Prototyping.pdf:PDF},
   owner        = {Dipl.-Ing Hanna Full},
   url          = {https://moodle.htw-berlin.de/pluginfile.php/1394565/mod_resource/content/1/06 Design Thinking - Prototyping.pdf},
+}
+
+@TechReport{Inc,
+  author    = {Apple Inc},
+  title     = {NSAppTransportSecurity},
+  abstract  = {A description of changes made to the default security for HTTP connections.},
+  owner     = {Apple Inc},
+  timestamp = {22.02.2022},
+  url       = {https://developer.apple.com/documentation/bundleresources/information_property_list/nsapptransportsecurity},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
