--- a/Bericht/Ideensammlung.tex
+++ b/Bericht/Ideensammlung.tex
@@ -1,6 +1,10 @@
 \section{Ideensammlung}
-\subsection{Starkstrom Taser Auto} Moni
-\subsection{Autoleere Stadt}
+Im nachfolgenden Kapitel werden wir drei unserer anfänglichen lieblings und vielleicht durchaus kuriosen Ideen vorstellen. Denn  nicht ohne Grund heißt es “ Der Fantasie sind keine Grenzen gesetzt” und nur mit ihr kann schließlich Entwicklung stattfinden.
+
+\subsection{Das Starkstrom Taser Auto}
+Viele Autos haben heutzutage bereits moderne Alarmsysteme und dennoch werden es potentielle Diebe nicht müde, diese auszukundschaften und passende Techniken zu entwickeln, sie auch auszuhebeln oder zumindest zu umgehen. Des Weiteren muss man ehrlich zu geben: Selbst wenn eine Alarmanlage anfängt laut zu piepsen, schaut man wirklich als Passant hin und unternimmt etwas und das gerade in Berlin, wo dies mehrmals am Tag allein in einer Straße vorkommt? Wir glauben nicht! Und waren daher der Meinung, dass ein Alarmsystem genial wäre, dass  nicht nur den Dieb daran hindert, das Auto zu stehlen, sondern gleichzeitig auch einen didaktischen Effekt aufweist. Ein wichtiges Helferlein aus unserem Ingenieurstudium könnte hier die Lösung sein - Die meisten Menschen haben schließlich auch noch heute großen Respekt vor ihm, wurde er doch auch früher bereits für Bestrafungen missbraucht - der Starkstrom. Die Idee war geboren: ein Auto, welches per App Steuerung und eigener zusätzlich eingebauter Batterie seine Außenhülle unter Strom setzt, wenn der Besitzer das möchte. Fasst der potentielle Kriminelle das Auto an, durchzieht ihn ein Stromschlag und wird höchstwahrscheinlich das Weite suchen - so die Theorie. Jedoch - so schön der Gedanke wäre und bereits Herr Prof. Scheffler zu uns sagte “um Verzeihung zu bitten ist einfacher als um Erlaubnis” so ganz ethisch ist diese Vorgehensweise jedoch nicht. Zudem müssten viele Sicherheitsvorkehrungen vorgenommen werden, wie beispielsweise eine KI die erkennt, dass vielleicht nur ein Kind verstecken spielt oder den Schnee von der Windschutzscheibe sammeln möchte. Daher haben wir uns letztendlich gegen diese Idee ausgesprochen, da bereits beim Gedankenexperiment sehr viele Hürden auftauchten, die wir hätten in recht kurzer Zeit überwinden müssen.
+
+\subsection{Die autoleere Stadt}
 Eine unserer Ideen war es, anstatt eine direkte Lösung für das Problem zu finden, das Problem selbst zu beseitigen. Hierfür haben wir uns vorgestellt, dass wir einfach Autos generell abschaffen. Die Idee ist, dass wenn es keine Autos mehr gibt, können sie auch nicht mehr geklaut werden. Diese Idee ist jedoch an der Umsetzbarkeit gescheitert. Es gibt zwar bereits Innenstädte, wo Autos verboten sind, jedoch ist dies nicht gleichzusetzen mit dem kommpletten Abschaffen von Autos, da diese zumeist nur außerhalb der Stadt geparkt sind. Die Idee wurde letztendlich verworfen, da die Umsetzung dieses Projekt unseren Projektrahmen gesprengt hätte. 
 \subsection{Gesichtserkennung und Startunterbrechung}
 Bei dieser Lösung hatten wir uns überlegt, mittels Gesichtserkennung zu überprüfen, ob die sich auf dem Fahrersitz befindliche Person der Besitzer oder ein berechtigter Fahrer des Fahrzeugs ist. Die Zündung des Autos soll hier nur dann möglich sein, wenn der Fahrer erkannt wird. Das Problem an dieser Modifikation und der Grund, warum wir uns gegen diese Idee entschieden haben, ist die Zulassungspflicht durch den TÜV. Um den Motor am Starten zu hindern, müssten wir uns entweder auf das Steuergerät des Autos mit aufschalten oder direkt eine Fernsteuerung für die Motorklemme mit einbauen. Die erste Möglichkeit scheitert daran, dass sich der Zugang zu den Steuersystemen des Autos schwer gestaltet, da je nach Modell die Steuersoftware unterschiedlich ist, womit allgemeine Ansätze ausgeschlossen sind. Des Weiteren erlauben Hersteller entweder generell nicht, dass Drittanbieter ihre Software nutzen oder stimmen nur gegen hohe Lizenzgebühren einer Nutzung zu. Ein weiteres Problem ist, dass beide Lösungen eine professionelle Installation bedürfen, was unserem Konzept widerspricht. Abgesehen davon ist es wie, bereits erwähnt, notwendig, für jedes Fahrzeugmodell die entsprechende Straßenzulassung für die Modifikation zu erhalten. Entsprechend ist der Arbeitsaufwand für unseren Projektzeitraum zu groß. 
