--- a/Bericht/Projektdokumentation.tex
+++ b/Bericht/Projektdokumentation.tex
@@ -9,7 +9,7 @@
 \usepackage{subfig}
 \usepackage{csquotes}
 \usepackage[backend=bibtex,natbib=true,style=alphabetic]{biblatex}
-\usepackage{hyperref}
+%\usepackage{hyperref}
 
 \addbibresource{Quellen.bib}
 \usepackage{siunitx}  
@@ -17,14 +17,14 @@
 
 
 \date{\today}
-\title{"Schrödingers Alarm"\\ Projektdokumentation}
-\author{Lucas Hanisch \and Seifeddine Mhiri \\ Paul Krause  \\  Monique Golnik \\ \\Master Informations- und Kommunikationstechnik WS 2021/22}
+\title{ \textbf{\textit{Konzeption und Entwicklung eines autarken Alarmsystems für Kraftfahrzeuge auf Basis GPS gestützter IoT-Technologie}}}
+\author{Projektdokumentation von: \\ \\ Lucas Hanisch (577019) \\ Seifeddine Mhiri (577027) \\ Paul Krause (577157)  \\  Monique Golnik (563075) \\ \\ \\ im Modul \textit{Projekt netzbasierte Systeme} \\ \\ Master Informations- und Kommunikationstechnik WS 2021/22 }
 
 \begin{document}
 	\maketitle
 	\tableofcontents
 	
-	\chapter{Start}
+\chapter{Einführung}
 	
 Im Rahmen des Masterstudiums wird das Studienfach „Projekt Netzbasierte Systeme“ angeboten. Der Kurs basiert sich auf einer Gruppenarbeit.
 Die Gruppe muss ein Thema wählen, das ein Problem mit der neuesten IT-Technologie löst. Das Projekt muss wie im realen Arbeitsleben durchgeführt werden. Die Aufgabenstellungen werden aus dem Themenbereich Informatik, Nachrichtentechnik und Kommunikationstechnik formuliert und unter Labor- und
@@ -40,9 +40,12 @@ Die "SchrödingersAlarm" Gruppe sind 4 Studenten, die an der HTW Berlin den Mast
 Nachdem das Team Ideen gesammelt hat, kam es zu der Idee ein System zum Schutz vor Automobil Diebstahl. 
 Als ersten Prototyp soll ein integriertes GPS, der die Koordinaten an den Nutzer über sein Smartphone senden. 
 Bei einem Fall, wo sich das Auto sich vom Smartphone des Nutzers weiter entfernt, soll eine Push-Benachrichtigung an den Nutzer gesendet.
-		
+	
+	
+	\chapter{Zielsetzung}
 	\input{Zielsetzung.tex}
 	\input{Ideensammlung.tex}
+	\chapter{Projektmanagement}
 	\input{Projektmanagement.tex}	
 	\input{Konzept.tex}	
 	\chapter{Entwicklung}
